--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -1,42 +1,36 @@
-<p>Logo-ap works</p>
-
-<!-- <div class="row">
+<div class="row">
   <div class="container">
     <div class="logo">
-      <a href=""><img src="../../../../src/assets/logos/APLogo.png" id="logo-ap" /></a>
+      <a href=""><img src="../../../assets/logos/APLogo.png" id="logo-ap" /></a>
     </div>
     <div class="redes">
       <a href="https://www.instagram.com/fede.moscov/"
-        ><img src="../../../../src/assets/logos/instagram.png" id="instagram"
+        ><img src="../../../assets/logos/instagram.png" id="instagram"
       /></a>
       <a href="https://www.facebook.com/inigo.federico"
-        ><img src="../../../../src/assets/logos/facebook.png" id="facebook"
+        ><img src="../../../assets/logos/facebook.png" id="facebook"
       /></a>
       <a href="https://twitter.com/FedeReveck"
-        ><img src="../../../../src/assets/logos/assets/twitter.png" id="twitter"
+        ><img src="../../../assets/logos/twitter.png" id="twitter"
       /></a>
       <a href="https://www.linkedin.com/in/inigo-federico/"
-        ><img src="../../../../src/assets/logos/assets/linkedin.png" id="linkedin"
+        ><img src="../../../assets/logos/linkedin.png" id="linkedin"
       /></a>
       <a href="https://github.com/inigofede"
-        ><img src="../../../../src/assets/logos/github.png" id="github"
+        ><img src="../../../assets/logos/github.png" id="github"
       /></a>
-     <button
+      <button
         type="button"
-        class="btn btn-outline-light"
-        (click)="login()"
-        *ngIf="!isLogged"
+        class="btn btn-outline-light"     
       >
         Iniciar Sesion
-      </button> -->
-<!-- <button
+      </button>
+      <button
         type="button"
-        class="btn btn-outline-light"
-        (click)="onLogOut()"
-        *ngIf="isLogged"
+        class="btn btn-outline-light"    
       >
         Cerrar Sesion
       </button>
     </div>
   </div>
-</div> -->
+</div>
