--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="row">
+  <footer>
+    <p>Iñigo Andrada Héctor Federico | © Argentina Programa 2023</p>
+    <p>Tucuman, Argentina.</p>
+  </footer>
+</div>
