--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -21,13 +21,17 @@
       /></a>
       <button
         type="button"
-        class="btn btn-outline-light"     
+        class="btn btn-outline-light"
+        (click)="login()"
+        *ngIf="!isLogged"
       >
         Iniciar Sesion
       </button>
       <button
         type="button"
-        class="btn btn-outline-light"    
+        class="btn btn-outline-light"
+        (click)="onLogOut()"
+        *ngIf="isLogged"
       >
         Cerrar Sesion
       </button>
