--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-header></app-header>
-<app-banner></app-banner>
-<app-acerca-de></app-acerca-de>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-hys></app-hys>
-<app-proyecto></app-proyecto>
+<router-outlet></router-outlet>
