--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,1 +1,25 @@
-<p>experiencia works!</p>
+<div class="row">
+  <h1>Experiencia Laboral</h1>
+  <div class="col-lg-2">
+      <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
+        Nueva Experiencia
+      </button>
+  </div>
+
+  <div class="col-lg-1"></div>
+    <div class="col-lg-11">
+      <table class="table">
+      <tBody>
+            <tr *ngFor="let Experiencia of expe">
+                <td><h5>{{Experiencia.nombreE}}</h5></td>
+                <td>{{Experiencia.descripcionE}}</td>
+                <td *ngIf="isLogged"><button class="btn btn-primary" routerLink="/editexp/{{Experiencia.id}}"><i class="bi bi-pencil-fill"></i> EDITAR</button></td>
+                <td *ngIf="isLogged"><button class="btn btn-danger" (click)="delete(Experiencia.id)"><i class="bi bi-trash3-fill"></i>BORRAR</button></td>
+            </tr>
+      </tBody>
+      </table>
+    </div>
+  
+  
+
+</div>
