--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -1,1 +1,40 @@
-<p>proyecto works!</p>
+<div class="row">
+  <div class="contenedor">
+    <h1 class="centrarclass">Proyectos Realizados</h1>
+    <div class="col-sm-12 col-md-5 col-lg-5 parte1">
+      <h2>Portfolio Argentina Programa</h2>
+      <p>
+        Es el primer proyecto que realizo.
+      </p>
+    </div>
+    <div class="col-sm-12 col-md-5 col-lg-5 offset-md-1 offset-lg-1 parte2">
+      <img
+        src="../../../assets/proyectos/proyecto1/img1.PNG"
+        class="img-fluid img-proyectos"
+      />
+    </div>
+
+    <div class="col-sm-12 col-md-5 col-lg-5 parte1">
+      <p>
+        Para realizarlo se utilizaron, vsCode, NodeJs, AngularCLI, Bootstrap, GitHub, Apache NetBeans, MySQL Workbench, XAMPP, Clever-Cloud, Render y Firebase.
+      </p>
+    </div>
+    <div class="col-sm-12 col-md-5 col-lg-5 offset-md-1 offset-lg-1 parte2">
+      <img
+        src="../../../assets/proyectos/proyecto1/img2.PNG"
+        class="img-fluid img-proyectos"
+      />
+    </div>
+    <div class="col-sm-12 col-md-5 col-lg-5 parte1">
+      <p>
+        Se puede ver a continuacion algunas imagenes de las herramientas utilizadas, tengo en mente seguir mejorando esta pagina, para seguir practicando y agregando funcionalidades.
+      </p>
+    </div>
+    <div class="col-sm-12 col-md-5 col-lg-5 offset-md-1 offset-lg-1 parte2">
+      <img
+        src="../../../assets/proyectos/proyecto1/img3.PNG"
+        class="img-fluid img-proyectos"
+      />
+    </div>
+  </div>
+</div>
