--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,19 +1,21 @@
 <div class="row">
+  
+      <button type="button" class="btn btn-light" routerLink="/editacercade/1" *ngIf="isLogged">
+        Editar Persona
+      </button>
+
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-    <img src="../../../assets/imagenes/perfil.jpg" class="img-fluid" id="foto-perfil" />
+    <img src="{{persona.img}}" class="img-fluid" id="foto-perfil" />
   </div>
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
     <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
     <p>Full Stack Developer Jr.</p>
   </div>
-  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 descripcionC">
     <span>
       <h1>Acerca de mi:</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
-        reprehenderit qui quos veritatis voluptatem deleniti reiciendis vel?
-        Est, autem vel rem incidunt ipsa, dolores ut eaque quidem eveniet
-        officiis rerum.
+        {{persona.descripcion}}
       </p>
     </span>
   </div>
