--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,3 +1,3 @@
 <div>
-  <img src="../../../assets/imagenes/banner2.jpg" class="img-fluid" />
+  <img src="../../../assets/imagenes/Banner.gif" class="img-fluid" />
 </div>
