--- a/src/app/components/educacion/edit-educacion.component.html
+++ b/src/app/components/educacion/edit-educacion.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="educacion">
     <div class="row">
         <div>
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
