--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <h1>Experiencia Laboral</h1>
   <div class="col-lg-2">
-      <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
+      <button type="button" class="btn btn-light" routerLink="/nuevaexp" *ngIf="isLogged">
         Nueva Experiencia
       </button>
   </div>
@@ -13,7 +13,7 @@
             <tr *ngFor="let Experiencia of expe">
                 <td><h5>{{Experiencia.nombreE}}</h5></td>
                 <td>{{Experiencia.descripcionE}}</td>
-                <td *ngIf="isLogged"><button class="btn btn-primary" routerLink="/editexp/{{Experiencia.id}}"><i class="bi bi-pencil-fill"></i> EDITAR</button></td>
+                <td *ngIf="isLogged"><button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}"><i class="bi bi-pencil-fill"></i> EDITAR</button></td>
                 <td *ngIf="isLogged"><button class="btn btn-danger" (click)="delete(Experiencia.id)"><i class="bi bi-trash3-fill"></i>BORRAR</button></td>
             </tr>
       </tBody>
